    + Add experimental makefile support (only enabled if -f is used)
    + Modify the "2>&foo" check to allow a valid file descriptor followed
      by a backslash (for line continuations)
    + Check the initial lines of shell script wrappers. Based on a patch from
      Raphael Geissert
    + Fix a couple of the quoted block detection checks so as not to trigger
      on escaped quotes
  * debchange:
    + Allow a changelog with no entries to be created. (Note that
      such a changelog will cause a warning from dpkg-parsehchangelog the
      next time debchange is used with it) (Closes: #475578)
    + Correctly handle control files containing comments when checking
      for NMUs (Closes: #475750)
    + Fix a side-effect of the automagic NMU detection functionality which
      could lead to a spurious stanza being added to the end of the changelog
    + Skip automatic NMU detection if -a was explicitly passed on the command
      line
    + Add {oldstable-,testing-,}proposed-updates to the list of supported
      distributions (Closes: #476264)
    + Add oldstable to the list of supported distributions, as updates
      to oldstable have been possible for some time
  * debcommit: Modify the "strip message" functionality so that:
    - Changelog lines beginning with any of *, + or - are considered to
      indicate a "change" for the purposes of deciding whether to strip 
      the message
    - When trimming leading whitespace on continuation lines, only spaces 
      and tabs are considered rather than line breaks (Closes: #475337)
  * debdiff:
    + Make the diffstat header for comparisons between two Debian revisions
      the same as that between two upstream versions
    + Normalise directory names in all file headers within a diff, not just
      the first
  * debian/control:
    + Suggest instead of Recommending gnuplot and cvs-buildpackage
    + Suggest svn-buildpackage (Closes: #476240)
  * debuild: